AI-JADEDEVS4/src/objects/NE_Class__c.object
<CustomObject>
    <description>For Taser</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Class Name</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Status__c</fullName>
        <description>Class Status</description>
        <label>Class Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course Name</description>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <inlineHelpText>Instructor Name</inlineHelpText>
        <label>Instructor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NE_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE Course</description>
        <label>NE Course</label>
        <referenceTo>NE_Course__c</referenceTo>
        <relationshipLabel>NE Classes</relationshipLabel>
        <relationshipName>NE_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>Venue Name</description>
        <label>Venue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NE Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NE Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>